fixed css alignment errors

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -298,6 +298,7 @@ height: 319px;
   font-family: helvetica;
   font-size: 9pt;
   padding: 13px;
+  text-align: center;
 }
 
 h2{
